LOTS - nearly all 1st revision round updates

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="index.html#request-an-estimate">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="contact.html">Request An Estimate</a>
 
                                     </li>
                                     <li class="dropdown"> <a href="#">Contact Us</a>
@@ -108,8 +108,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 class="text-uppercase">Get In Touch</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condimentum porttitor cursus. Duis nec nulla turpis. Nulla lacinia laoreet odio, non lacinia nisl malesuada vel. Aenean malesuada fermentum bibendum.</p>
+                        <h3 class="text-uppercase">Request an Estimate</h3>
+                        <p>These messages are forwarded directly to our email. You will recieve a response within one hour (during regular business hours).</p>
                         <div class="m-t-30">
                             <form id="widget-contact-form" action="include/contact-form.php" role="form" method="post">
                                 <div class="row">
@@ -124,12 +124,12 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-sm-12">
-                                        <label for="subject">Your Subject</label>
-                                        <input type="text" name="widget-contact-form-subject" class="form-control required" placeholder="Subject...">
+                                        <label for="subject">Vehicle Type</label>
+                                        <input type="text" name="widget-contact-form-subject" class="form-control required" placeholder="Vehicle Type">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="message">Message</label>
+                                    <label for="message">Describe the Issue</label>
                                     <textarea type="text" name="widget-contact-form-message" rows="5" class="form-control required" placeholder="Enter your Message"></textarea>
                                 </div>
                                 <input type="text" class="hidden" id="widget-contact-form-antispam" name="widget-contact-form-antispam" value="" />
@@ -206,83 +206,43 @@
 			<div class="row">
 
 
-				<div class="col-md-4">
-					<div class="widget clearfix widget-contact-us" style="background-image: url('images/world-map.png'); background-position: 50% 55px; background-repeat: no-repeat">
-						<h4 class="widget-title">Contact us</h4>
+				<div class="col-sm-4">
+					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
 							<li><i class="fa fa-map-marker"></i>
 								<strong>Address:</strong> 2702 N Mattis Ave
 								<br>Champaign, IL 61822</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-sm-4">
+                    					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
+						<ul class="list-large list-icons">
 							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (217) 531-2695 </li>
 							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:smiller@5dcollision.com">smiller@5dcollision.com</a>
 							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-sm-4">	
+                    					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
+						<ul class="list-large list-icons">
 							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>08:00am - 5:00pm</strong>
 								<br>Saturday: <strong>8:00am - 12:00pm</strong>
 							</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="widget clearfix widget-tweeter">
-     <h4 class="widget-title">Recent Tweets</h4>
-</div>
-				</div>
-
-				<div class="col-md-4">
-
-					<div class="widget clearfix widget-newsletter">
-                                <form id="widget-subscribe-form" action="include/subscribe-form.php" role="form" method="post" class="form-inline">
-                                    <h4 class="widget-title">Newsletter</h4>
-                                    <small>Stay informed on our latest news!</small>
-                                    <div class="input-group">
-                                        <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
-                                        <input type="email" aria-required="true" name="widget-subscribe-form-email" class="form-control required email" placeholder="Enter your Email">
-                                        <span class="input-group-btn">
-											<button type="submit" id="widget-subscribe-submit-button" class="btn btn-primary">Subscribe</button>
-										</span>
-                                    </div>
-                                </form>
-                                <script type="text/javascript">
-                                    jQuery("#widget-subscribe-form").validate({
-                                        submitHandler: function(form) {
-                                            jQuery(form).ajaxSubmit({
-                                                dataType: 'json',
-                                                success: function(text) {
-                                                    if (text.response == 'success') {
-                                                        $.notify({
-                                                            message: "You have successfully subscribed to our mailing list."
-                                                        }, {
-                                                            type: 'success'
-                                                        });
-                                                        $(form)[0].reset();
-
-                                                    } else {
-                                                        $.notify({
-                                                            message: text.message
-                                                        }, {
-                                                            type: 'warning'
-                                                        });
-                                                    }
-                                                }
-                                            });
-                                        }
-                                    });
-                                  </script>
-                            </div>
-
-				</div>
-
-
 
 			</div>
-
 
 		</div>
 	</div>
             <div class="copyright-content">
                 <div class="container">
                     <div class="row">
-                        <div class="copyright-text text-center"> &copy; 2017 5th Dimension Collision Repair<br>Website by <a target="_blank" href="http://www.inspiro-media.com">Cradle Media</a>
+                        <div class="copyright-text text-center"> &copy; 2017 5th Dimension Collision Repair<br>Website by <a target="_blank" href="http://davidaschiller.com/">Cradle Media</a>
                         </div>
                     </div>
                 </div>
