--- a/staff.html
+++ b/staff.html
@@ -91,7 +91,7 @@
                                         <ul class="dropdown-menu">
                                         </ul>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="index.html#request-an-estimate">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="contact.html">Request An Estimate</a>
 
                                     </li>
                                     <li class="dropdown"> <a href="#">Contact Us</a>
@@ -111,7 +111,7 @@
 	<div class="container">
 		<div class="page-title col-md-8 text-shadow-dark">
 			<h1 class="text-uppercase text-medium">OUR TEAM</h1>
-			<span>5th Dimension was founded in 2007 and has grown steadily since. Our secret is a focus both on great worksmanship as well as great customer service! We want to make sure every customer has the best experience possible!</span>
+			<span class="team-title-description">5th Dimension was founded in 2007 and has grown steadily since. Our secret is a focus both on great worksmanship as well as great customer service! We want to make sure every customer has the best experience possible!</span>
 		</div>
 	</div>
 </section>
@@ -120,7 +120,7 @@
 <section>
 	<div class="container">
 		<div class="heading heading-center">
-			<h2>Founder Team</h2>
+			<h2>Owners</h2>
 			<span></span>
 		</div>
 
@@ -131,10 +131,8 @@
 					<img src="images/team/1.jpg" alt="">
 				</div>
 				<div class="image-box-description text-center">
-					<h4>Scott Miller</h4>
+					<h4>Ingrid Hampton</h4>
 					<p class="subtitle">Founder</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -142,10 +140,8 @@
 					<img alt="" src="images/team/2.jpg">
 				</div>
 				<div class="image-box-description text-center">
-					<h4>Ingrid Hampton</h4>
+					<h4>Scott Miller</h4>
 					<p class="subtitle">Founder</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
 				</div>
 			</div>
 	</div>
@@ -156,20 +152,18 @@
 	<div class="container">
 		<div class="heading heading-center">
 			<h2>Staff</h2>
-			<span>At Fifth Dimension we are lucky to have an extremely talented and experienced staff. Here are some of the people who will be working on your vehicle!</span>
+			<span>At Fifth Dimension we are lucky to have an extremely talented and experienced staff. Here are some of the people who will be assisting you on the repair of your vehicle!</span>
 		</div>
 
 		<div class="row">
 
 			<div class="col-md-4">
 				<div class="image-box circle-image small">
-					<img src="images/team/1.jpg" alt="">
+					<img src="images/team/4.jpg" alt="">
 				</div>
 				<div class="image-box-description text-center">
-					<h4>Jason Swed</h4>
-					<p class="subtitle">Production Manager</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
+					<h4>Penny Partenhiemer</h4>
+					<p class="subtitle">Front Office CSR</p>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -179,8 +173,6 @@
 				<div class="image-box-description text-center">
 					<h4>Kym Swed</h4>
 					<p class="subtitle">Estimator</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -190,46 +182,28 @@
 				<div class="image-box-description text-center">
 					<h4>Justin Calvin</h4>
 					<p class="subtitle">Parts Manager</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-6">
 				<div class="image-box circle-image small">
 					<img src="images/team/6.jpg" alt="">
 				</div>
 				<div class="image-box-description text-center">
 					<h4>Joe Latham</h4>
-					<p class="subtitle">Head Pointer</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
+					<p class="subtitle">Head Painter</p>
 				</div>
 			</div>
 
 
-			<div class="col-md-4">
+			<div class="col-md-6">
 				<div class="image-box circle-image small">
 					<img src="images/team/5.jpg" alt="">
 				</div>
 				<div class="image-box-description text-center">
 					<h4>Kriston Rasch</h4>
 					<p class="subtitle">Office Supervisor</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
 				</div>
 			</div>
-			<div class="col-md-4">
-				<div class="image-box circle-image small">
-					<img alt="" src="images/team/4.jpg">
-				</div>
-				<div class="image-box-description text-center">
-					<h4>Penny Partenhiemer</h4>
-					<p class="subtitle">Front Office CSR</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
-				</div>
-			</div>
-
 		</div>
 	</div>
 
@@ -260,7 +234,7 @@
 
 
 
-<!-- FOOTER -->
+        <!-- FOOTER -->
         <footer class="background-dark text-grey" id="footer">
 
             <div class="footer-content">
@@ -277,89 +251,49 @@
 			<div class="row">
 
 
-				<div class="col-md-4">
-					<div class="widget clearfix widget-contact-us" style="background-image: url('images/world-map.png'); background-position: 50% 55px; background-repeat: no-repeat">
-						<h4 class="widget-title">Contact us</h4>
+				<div class="col-sm-4">
+					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
 							<li><i class="fa fa-map-marker"></i>
 								<strong>Address:</strong> 2702 N Mattis Ave
 								<br>Champaign, IL 61822</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-sm-4">
+                    					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
+						<ul class="list-large list-icons">
 							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (217) 531-2695 </li>
 							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:smiller@5dcollision.com">smiller@5dcollision.com</a>
 							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-sm-4">	
+                    					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
+						<ul class="list-large list-icons">
 							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>08:00am - 5:00pm</strong>
 								<br>Saturday: <strong>8:00am - 12:00pm</strong>
 							</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="widget clearfix widget-tweeter">
-                        <h4 class="widget-title">Recent Tweets</h4>
-                    </div>
-				</div>
-
-				<div class="col-md-4">
-
-					<div class="widget clearfix widget-newsletter">
-                                <form id="widget-subscribe-form" action="include/subscribe-form.php" role="form" method="post" class="form-inline">
-                                    <h4 class="widget-title">Newsletter</h4>
-                                    <small>Stay informed on our latest news!</small>
-                                    <div class="input-group">
-                                        <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
-                                        <input type="email" aria-required="true" name="widget-subscribe-form-email" class="form-control required email" placeholder="Enter your Email">
-                                        <span class="input-group-btn">
-											<button type="submit" id="widget-subscribe-submit-button" class="btn btn-primary">Subscribe</button>
-										</span>
-                                    </div>
-                                </form>
-                                <script type="text/javascript">
-                                    jQuery("#widget-subscribe-form").validate({
-                                        submitHandler: function(form) {
-                                            jQuery(form).ajaxSubmit({
-                                                dataType: 'json',
-                                                success: function(text) {
-                                                    if (text.response == 'success') {
-                                                        $.notify({
-                                                            message: "You have successfully subscribed to our mailing list."
-                                                        }, {
-                                                            type: 'success'
-                                                        });
-                                                        $(form)[0].reset();
-
-                                                    } else {
-                                                        $.notify({
-                                                            message: text.message
-                                                        }, {
-                                                            type: 'warning'
-                                                        });
-                                                    }
-                                                }
-                                            });
-                                        }
-                                    });
-                                  </script>
-                            </div>
-
-				</div>
-
-
 
 			</div>
-
 
 		</div>
 	</div>
             <div class="copyright-content">
                 <div class="container">
                     <div class="row">
-                        <div class="copyright-text text-center"> &copy; 2017 5th Dimension Collision Repair<br>Website by <a target="_blank" href="http://www.inspiro-media.com">Cradle Media</a>
+                        <div class="copyright-text text-center"> &copy; 2017 5th Dimension Collision Repair<br>Website by <a target="_blank" href="http://davidaschiller.com/">Cradle Media</a>
                         </div>
                     </div>
                 </div>
             </div>
         </footer>
-<!-- END: FOOTER -->
+        <!-- END: FOOTER -->
 
 </div>
 <!-- END: WRAPPER -->
