various updates before 2nd meeting

--- a/contactvideo.html
+++ b/contactvideo.html
@@ -104,8 +104,9 @@
         <!-- END: PAGE TITLE -->
         
         <!-- VIDEO -->
-        <section class="fullscreen background-overlay" data-vide-bg="video/bg" data-vide-options="position: 0% 50%">
+        <section class="fullscreen background-overlay" data-vide-bg="video/cs_bg" data-vide-options="position: 0% 50%">
 			<div class="container-fluid">
+                <div class="col-md-6"></div>
 				<div class="col-md-6 background-colored text-light p-40">
                         <div class="text-medium">REQUEST AN ESTIMATE</div>
                         <h4>You will recieve a response within the hour.</h4>
@@ -164,6 +165,7 @@
 
                 </div>
 			</div>
+
 		</section>
 <!-- END: VIDEO -->
 
