--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
     <!-- LOAD GOOGLE FONTS -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
+
 
     <!-- CSS CUSTOM STYLE -->
     <link rel="stylesheet" type="text/css" href="css/custom.css" media="screen" />
@@ -202,23 +204,23 @@
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/1.png" alt="">
                         <h3 class="m-b-10">BODY & FRAME REPAIR</h3>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
+                        <span>If you car has cosmetic or frame damage, we can fix it! We use state of the art equipment to make sure everything is road-ready.</span>
                     </div>
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/2.png" alt="">
                         <h3 class="m-b-10">MINOR MECHANICAL REPAIR</h3>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
+                        <span>We can handle any and all minor mechanical repairs to your vehicle. Our technicians have repaired vehicles of all types, shapes and sizes!</span>
                     </div>
 
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/3.png" alt="">
                         <h3 class="m-b-10">PAINT SERVICES<br><br></h3>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
+                        <span>Our extrmemely talented paint crew can do whatever you need. From damage repair to total custom paint jobs, we do it all!</span>
                     </div>
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/4.png" alt="">
                         <h3 class="m-b-10">GREAT CUSTOMER SERVICE</h3>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
+                        <span>We care about our customers. We make it our job to make sure that every customer has the best experience possible!</span>
                     </div>
                 </div>
             </div>
