Many updates from 2nd meeting

--- a/contact.html
+++ b/contact.html
@@ -74,14 +74,12 @@
                                 <ul class="main-menu nav nav-pills">
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
-                                    <li class="dropdown"> <a href="staff.html">About Us</a>
-                                    </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="contact.html">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="estimate.html">Request An Estimate</a>
 
                                     </li>
-                                    <li class="dropdown"> <a href="#">Contact Us</a>
+                                    <li class="dropdown"> <a href="contact.html">Contact Us</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -124,12 +122,12 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-sm-12">
-                                        <label for="subject">Vehicle Type</label>
-                                        <input type="text" name="widget-contact-form-subject" class="form-control required" placeholder="Vehicle Type">
+                                        <label for="subject">Phone Number</label>
+                                        <input type="text" name="widget-contact-form-subject" class="form-control required" placeholder="Phone Number">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="message">Describe the Issue</label>
+                                    <label for="message">Describe the Issue In a Few Sentences</label>
                                     <textarea type="text" name="widget-contact-form-message" rows="5" class="form-control required" placeholder="Enter your Message"></textarea>
                                 </div>
                                 <input type="text" class="hidden" id="widget-contact-form-antispam" name="widget-contact-form-antispam" value="" />
