--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
                     <!--LOGO-->
                     <div id="logo">
-                        <a href="index.html" class="logo" data-dark-logo="images/logo-dark.png">
-                            <img src="images/logo.png" alt="Polo Logo">
+                        <a href="index.html" class="logo" data-dark-logo="images/5d-logo-small.png">
+                            <img src="images/5d-logo-small.png" alt="Polo Logo">
                         </a>
                     </div>
                     <!--END: LOGO-->
@@ -85,11 +85,9 @@
                                 <ul class="main-menu nav nav-pills">
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
-                                    <li class="dropdown"> <a href="staff.html">About Us</a>
-                                    </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>   
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="contact.html">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="estimate.html">Request An Estimate</a>
 
                                     </li>
                                     <li class="dropdown"> <a href="contact.html">Contact Us</a>
@@ -112,7 +110,7 @@
 						<!--<h3 class="m-b-0">5th Dimension</h3>-->
 						<h2 class="text-medium m-t-0">5th Dimension Collision Repair</h2>
 						<p class="lead">Quality Worksmanship, Quality Service</p>
-						<a class="button button-light rounded" href="#request-an-estimate">Request an Estimate</a>						
+						<a class="button button-light rounded" href="estimate.html">Request an Estimate</a>						
 					</div>
 
 
@@ -133,30 +131,12 @@
 
                 <!-- Testimonials -->
                 <div id="testimonials">
-
-                    <!-- Testimonials item -->
-                    <div class="testimonial-item">
-                        <p>The people were great and the work was done fast and professionally. Can not recommend Fifth Dimension highly enough. They did a fantastic job.</p>
-                        <span>Rob Walls, Google Review, 2014</span>
-                    </div>
-                    <!-- End: Testimonials item-->
-
-                    <!-- Testimonials item -->
-                    <div class="testimonial-item">
-                        <p>The entire staff were so helpful and kept me informed through the entire process. I highly recommend Fifth Dimension Collision Repair!</p>
-                        <span>Google Review, Karen, 2016</span>
-                    </div>
-                    <!-- End: Testimonials item-->
-
-                    <!-- Testimonials item -->
-                    <div class="testimonial-item">
-                        <p>These people are the real deal. They are very professional, honest and open about the work they do and the cost associated with the repairs.</p>
-                        <span>Gina, Google Review, 2015</span>
-                    </div>
-                    <!-- End: Testimonials item-->
                     
                     <!-- Testimonials item -->
                     <div class="testimonial-item">
+                        <div class="testimonial-stars">
+                            <img src="images/five-stars.png" alt="">
+                        </div>
                         <p>Excellent, Excellent, Excellent....You won't be disappointed.</p>
                         <span>Roberta, 2015, Google Review, 2015</span>
                     </div>
@@ -164,6 +144,40 @@
 
                     <!-- Testimonials item -->
                     <div class="testimonial-item">
+                        <div class="testimonial-stars">
+                            <img src="images/five-stars.png" alt="">
+                        </div>
+                        <p>The people were great and the work was done fast and professionally. Can not recommend Fifth Dimension highly enough. They did a fantastic job.</p>
+                        <span>Rob Walls, Google Review, 2014</span>
+                    </div>
+                    <!-- End: Testimonials item-->
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <div class="testimonial-stars">
+                            <img src="images/five-stars.png" alt="">
+                        </div>
+                        <p>The entire staff were so helpful and kept me informed through the entire process. I highly recommend Fifth Dimension Collision Repair!</p>
+                        <span>Google Review, Karen, 2016</span>
+                    </div>
+                    <!-- End: Testimonials item-->
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <div class="testimonial-stars">
+                            <img src="images/five-stars.png" alt="">
+                        </div>
+                        <p>These people are the real deal. They are very professional, honest and open about the work they do and the cost associated with the repairs.</p>
+                        <span>Gina, Google Review, 2015</span>
+                    </div>
+                    <!-- End: Testimonials item-->
+                    
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <div class="testimonial-stars">
+                            <img src="images/five-stars.png" alt="">
+                        </div>
                         <p>Fantastic service from people that know (and love) what they're doing. Absolutely the best in the area.</p>
                         <span>Steve, Google Review, 2016</span>
                     </div>
