--- a/estimate.html
+++ b/estimate.html
@@ -68,20 +68,18 @@
                     <!--END: MOBILE MENU -->
 
                     <!--NAVIGATION-->
-<div class="navbar-collapse collapse main-menu-collapse navigation-wrap">
+                    <div class="navbar-collapse collapse main-menu-collapse navigation-wrap">
                         <div class="container">
                             <nav id="mainMenu">
                                 <ul class="main-menu nav nav-pills">
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
-                                    <li class="dropdown"> <a href="staff.html">About Us</a>
-                                    </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="contact.html">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="estimate.html">Request An Estimate</a>
 
                                     </li>
-                                    <li class="dropdown"> <a href="#">Contact Us</a>
+                                    <li class="dropdown"> <a href="contact.html">Contact Us</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -125,7 +123,7 @@
                                 <input type="text" aria-required="true" name="widget-contact-form-phone" class="form-control required" placeholder="Enter your Phone number">
                             </div>
                             <div class="form-group">
-                                <label for="message">Describe Your Issue</label>
+                                <label for="message">Describe Your Issue In a Few Sentences</label>
                                 <textarea type="text" name="widget-contact-form-message" rows="7" class="form-control required" placeholder="Enter your Message"></textarea>
                             </div>
                             <div class="form-group text-center">
