lots of small updates. New video

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
                     <!--LOGO-->
                     <div id="logo">
-                        <a href="index.html" class="logo" data-dark-logo="images/logo-dark.png"> <img src="images/logo.png" alt="Polo Logo"> </a>
+                        <a href="index.html" class="logo" data-dark-logo="images/5d-logo-black.png"> <img src="images/5d-logo-black.png" alt="Polo Logo"> </a>
                     </div>
                     <!--END: LOGO-->
 
@@ -193,7 +193,7 @@
             <div class="footer-content">
                 <div class="container">
                     <div class="row text-center">
-                        <img alt="" src="images/logo-sm-dark.png">
+                        <img alt="" src="images/5d-logo-white.png">
                         <div class="text-center">5th Dimension Collision Repair
                         </div>
 
