--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <img src="images/five-stars.png" alt="">
                         </div>
                         <p>Excellent, Excellent, Excellent....You won't be disappointed.</p>
-                        <span>Roberta, 2015, Google Review, 2015</span>
+                        <span>Roberta, Google Review, 2015</span>
                     </div>
                     <!-- End: Testimonials item-->
 
@@ -358,7 +358,7 @@
             <div class="footer-content">
                 <div class="container">
                     <div class="row text-center">
-                        <img alt="" src="images/logo-sm-dark.png">
+                        <img alt="" src="images/5d-logo-white.png">
                         <div class="text-center">5th Dimension Collision Repair
                         </div>
 
