fixed email link in footer

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
 							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (217) 531-2695 </li>
-							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:smiller@5dcollision.com">smiller@5dcollision.com</a>
+							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:csr@5dcollision.com">csr@5dcollision.com</a>
 							</li>
 						</ul>
 					</div>
