fixed cat link and added text on estimate form

--- a/our-work.html
+++ b/our-work.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col-sm-10">
                         <h3>Remember: It is ALWAYS your choice where to get your car repaired.</h3>
-                        <p>Don't let your insurance company push you around. We can get you an estimate today.</p><a href="contact.html" class="button button-light rounded">Request an Estimate</a>
+                        <p>Don't let your insurance company push you around. We can get you an estimate today.</p><a href="estimate.html" class="button button-light rounded">Request an Estimate</a>
                     </div>
                 </div>
 
