--- a/estimate.html
+++ b/estimate.html
@@ -107,7 +107,7 @@
                 <div class="col-md-6"></div>
 				<div class="col-md-6 background-colored text-light p-40">
                         <div class="text-medium">REQUEST AN ESTIMATE</div>
-                        <h4>You will recieve a response within the hour.</h4>
+                        <h4>You will recieve a response within the hour (during regular business hours).</h4>
                         <form id="widget-contact-form" action="contact-form.php" role="form" method="post">
 
                             <div class="form-group">
