lots of updates from their email notes

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
                     <!--LOGO-->
                     <div id="logo">
-                        <a href="index.html" class="logo" data-dark-logo="images/5d-logo-small.png">
-                            <img src="images/5d-logo-small.png" alt="Polo Logo">
+                        <a href="index.html" class="logo" data-dark-logo="images/5d-logo-diamond.png">
+                            <img src="images/5d-logo-diamond.png" alt="Polo Logo">
                         </a>
                     </div>
                     <!--END: LOGO-->
@@ -148,7 +148,7 @@
                             <img src="images/five-stars.png" alt="">
                         </div>
                         <p>The people were great and the work was done fast and professionally. Can not recommend Fifth Dimension highly enough. They did a fantastic job.</p>
-                        <span>Rob Walls, Google Review, 2014</span>
+                        <span>Rob, Google Review, 2014</span>
                     </div>
                     <!-- End: Testimonials item-->
 
@@ -158,7 +158,7 @@
                             <img src="images/five-stars.png" alt="">
                         </div>
                         <p>The entire staff were so helpful and kept me informed through the entire process. I highly recommend Fifth Dimension Collision Repair!</p>
-                        <span>Google Review, Karen, 2016</span>
+                        <span>Karen, Google Review, 2016</span>
                     </div>
                     <!-- End: Testimonials item-->
 
@@ -391,7 +391,7 @@
 				<div class="col-sm-4">	
                     					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
-							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>08:00am - 5:00pm</strong>
+							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>7:30am - 5:30pm</strong>
 								<br>Saturday: <strong>8:00am - 12:00pm</strong>
 							</li>
 						</ul>
