--- a/our-work.html
+++ b/our-work.html
@@ -61,8 +61,8 @@
 
 					<!--LOGO-->
 					<div id="logo">
-						<a href="index.html" class="logo" data-dark-logo="images/5d-logo-black.png">
-							<img src="images/5d-logo-black.png" alt="Polo Logo">
+						<a href="index.html" class="logo" data-dark-logo="images/5d-logo-diamond.png">
+							<img src="images/5d-logo-diamond.png" alt="Polo Logo">
 						</a>
 					</div>
 					<!--END: LOGO-->
@@ -306,7 +306,7 @@
 				<div class="col-sm-4">	
                     					<div class="widget clearfix widget-contact-us" style="background-image: url(''); background-position: 50% 55px; background-repeat: no-repeat">
 						<ul class="list-large list-icons">
-							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>08:00am - 5:00pm</strong>
+							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>7:30am - 5:30pm</strong>
 								<br>Saturday: <strong>8:00am - 12:00pm</strong>
 							</li>
 						</ul>
