mostly logo changes

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
                     <!--LOGO-->
                     <div id="logo">
-                        <a href="index.html" class="logo" data-dark-logo="images/5d-logo-diamond.png">
-                            <img src="images/5d-logo-diamond.png" alt="Polo Logo">
+                        <a href="index.html" class="logo" data-dark-logo="images/5d-full-white.png">
+                            <img src="images/5d-full-white.png" alt="Polo Logo">
                         </a>
                     </div>
                     <!--END: LOGO-->
