--- a/our-work.html
+++ b/our-work.html
@@ -61,8 +61,8 @@
 
 					<!--LOGO-->
 					<div id="logo">
-						<a href="index.html" class="logo" data-dark-logo="images/5d-logo-diamond.png">
-							<img src="images/5d-logo-diamond.png" alt="Polo Logo">
+						<a href="index.html" class="logo" data-dark-logo="images/5d-full.png">
+							<img src="images/5d-full.png" alt="Polo Logo">
 						</a>
 					</div>
 					<!--END: LOGO-->
@@ -273,7 +273,7 @@
             <div class="footer-content">
                 <div class="container">
                     <div class="row text-center">
-                        <img alt="" src="images/5d-logo-white.png">
+                        <img alt="" src="images/5d-full-white.png">
                         <div class="text-center">5th Dimension Collision Repair
                         </div>
 
