--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
             <div class="footer-content">
                 <div class="container">
                     <div class="row text-center">
-                        <img alt="" src="images/5d-logo-white.png">
+                        <img alt="" src="images/5d-full-white.png">
                         <div class="text-center">5th Dimension Collision Repair
                         </div>
 
