--- a/estimate.html
+++ b/estimate.html
@@ -57,7 +57,7 @@
 
                     <!--LOGO-->
                     <div id="logo">
-                        <a href="index.html" class="logo" data-dark-logo="images/5d-logo-black.png"> <img src="images/5d-logo-black.png" alt="Polo Logo"> </a>
+                        <a href="index.html" class="logo" data-dark-logo="images/5d-full.png"> <img src="images/5d-full.png" alt="Polo Logo"> </a>
                     </div>
                     <!--END: LOGO-->
 
@@ -92,13 +92,13 @@
         <!-- END: HEADER -->
 
         <!-- PAGE TITLE -->
-        <section id="page-title" class="page-title-parallax page-title-center text-dark" style="background-image:url(images/parallax/page-title-parallax.jpg);">
             <div class="container">
-                <div class="page-title col-md-8" data-animation="fadeInDown" data-animation-delay="300">
-                    <h1>REQUEST AN ESTIMATE</h1>
+                <div class="col-md-3"></div>
+                    <div class="page-title col-md-6" data-animation="fadeInDown" data-animation-delay="300">
+                        <h1>Request an Estimate</h1>
+                    </div>
+                <div class="col-md-3"></div>
             </div>
-            </div>        
-        </section>
         <!-- END: PAGE TITLE -->
         
         <!-- VIDEO -->
